kubernetes/manifests/ingress-controller.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
# Install via helm values - run:
# helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
# helm install ingress-nginx ingress-nginx/ingress-nginx \
#   --namespace ingress-nginx \
#   -f ../helm-values/ingress-nginx.yml
