kubernetes/manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: homelab
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
